本番デプロイ用にassets-webpack-pluginを入れました

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
 
     <title></title>
 
-    <link rel="stylesheet" media="all" href="/style.css">
+    <link rel="stylesheet" media="all" href="/assets/style-bundle.css">
   </head>
   <body>
-    <script src="/app.js"></script>
+    <script src="/assets/app-bundle.js"></script>
   </body>
 </html>
